--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
     <link type="text/css" rel="stylesheet" href="https://source.zoom.us/1.7.7/css/react-select.css" />
     <script src="https://source.zoom.us/1.7.7/lib/vendor/jquery.min.js"></script>
     <script src="https://source.zoom.us/1.7.7/lib/vendor/lodash.min.js"></script>
+    <style>
+      #zmmtg-root {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
