--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,7 @@
     <link type="text/css" rel="stylesheet" href="https://source.zoom.us/1.7.8/css/react-select.css" />
     <script src="https://source.zoom.us/1.7.8/lib/vendor/jquery.min.js"></script>
     <script src="https://source.zoom.us/1.7.8/lib/vendor/lodash.min.js"></script>
+    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
     <style>
       #zmmtg-root {
         display: none;
