--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -49,6 +46,24 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
   </body>
+  <script type="text/javascript">
+    (function(d, src, c) {
+      var t = d.scripts[d.scripts.length - 1],
+        s = d.createElement("script");
+      s.id = "la_x2s6df8d";
+      s.async = true;
+      s.src = src;
+      s.onload = s.onreadystatechange = function() {
+        var rs = this.readyState;
+        if (rs && rs != "complete" && rs != "loaded") {
+          return;
+        }
+        c(this);
+      };
+      t.parentElement.insertBefore(s, t.nextSibling);
+    })(document, "https://perfectloop.ladesk.com/scripts/track.js", function(e) {
+      LiveAgent.createButton("w4hgkhyv", e);
+    });
+  </script>
 </html>
