Use different style for live chat

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -63,7 +63,7 @@
       };
       t.parentElement.insertBefore(s, t.nextSibling);
     })(document, "https://perfectloop.ladesk.com/scripts/track.js", function(e) {
-      LiveAgent.createButton("w4hgkhyv", e);
+      LiveAgent.createButton("7vt8j4b5", e);
     });
   </script>
 </html>
