--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,6 +34,10 @@
     </style>
   </head>
   <body>
+    <script src="https://www.paypal.com/sdk/js?client-id=%REACT_APP_PAY_PAL_CLIENT_ID%&disable-funding=card,credit">
+      // Required. Replace SB_CLIENT_ID with your sandbox client ID.
+    </script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
